@@ -1,6 +1,6 @@
 Package: crs
-Version: 0.15-17
-Date: 2012-06-04
+Version: 0.15-18
+Date: 2012-06-18
 Depends:
 Suggests: np, npRmpi, rgl, quadprog, quantreg
 Title: Categorical Regression Splines
